[package]
name = "substitute"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
fancy-regex = "0.7"
lazy_static = "1"
regex = "*"
shlex="1"
onig = { version = "6", default-features = false }
